--- a/src/resources/cascadestyle/image.css
+++ b/src/resources/cascadestyle/image.css
@@ -8,6 +8,10 @@ and open the template in the editor.
     Author     : sakit
 */
 
-#imgNext:hover{    
+.button:hover{    
     -fx-effect:dropshadow(three-pass-box, #f5a20f,10.0,0.90,0.0,0.0);
+}
+
+.button{
+    -fx-background-color: transparent;
 }
